NULL =

png_icons = \
	ac-adapter.png \
	audio-card.png \
	audio-headphones.png \
	audio-headset.png \
	audio-input-microphone.png \
	audio-speakers.png \
	battery.png \
	camera-photo.png \
	camera-video.png \
	camera-web.png \
	computer.png \
	drive-harddisk.png \
	drive-multidisk.png \
	drive-optical.png \
	drive-removable-media.png \
	input-dialpad.png \
	input-gaming.png \
	input-keyboard.png \
	input-mouse.png \
	input-tablet.png \
	input-touchpad.png \
	media-flash.png \
	media-floppy.png \
	media-optical.png \
	media-removable.png \
	media-tape.png \
	multimedia-player.png \
	modem.png \
	network-vpn.png \
	network-wired.png \
	network-wireless.png \
	pda.png \
	phone.png \
	printer.png \
	printer-network.png \
	scanner.png \
	uninterruptible-power-supply.png \
	video-display.png \
	$(NULL)

ac-adapter.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=302:65:318:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-card.png: ../../../src/audio-card.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-headphones.png: ../../../src/audio-headphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:363:319:379 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-headset.png: ../../../src/audio-headphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:63:319:79 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-input-microphone.png: ../../../src/audio-input-microphone.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-speakers.png: ../../../src/audio-speakers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=304:665:320:681 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-photo.png: ../../../src/camera-photo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=300:64:316:80 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-video.png: ../../../src/camera-video.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

camera-web.png: ../../../src/camera-web.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

computer.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:365:319:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-harddisk.png: ../../../src/drive-harddisk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:59:319:75 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-multidisk.png: ../../../src/drive-multidisk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:59:319:75 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-optical.png: ../../../src/drives.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:64:319:80 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

drive-removable-media.png: ../../../src/drives.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:64:719:80 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-dialpad.png: ../../../src/input-dialpad.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-gaming.png: ../../../src/input-gaming.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=343:85:359:101 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-keyboard.png: ../../../src/keyboards.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-mouse.png: ../../../src/input-mouse.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-tablet.png: ../../../src/input-tablet.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

input-touchpad.png: ../../../src/input-touchpad.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-flash.png: ../../../src/media-flash.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-floppy.png: ../../../src/media-floppy.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:63:319:79 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-optical.png: ../../../src/media-optical.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-removable.png: ../../../src/media-removable.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-tape.png: ../../../src/media-tape.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

multimedia-player.png: ../../../src/multimedia-player.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

modem.png: ../../../src/modem.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-vpn.png: ../../../src/network-vpn.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-wired.png: ../../../src/network-wired.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:66:319:82 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-wireless.png: ../../../src/network-wireless.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

pda.png: ../../../src/pda.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

phone.png: ../../../src/phone.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:359:319:375 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-network.png: ../../../src/printer-network.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:63:319:79 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

scanner.png: ../../../src/scanner.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:63:319:79 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

uninterruptible-power-supply.png: ../../../src/uninterruptible-power-supply.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

video-display.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:365:319:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
