NULL =

png_icons = \
	appointment-missed.png \
	appointment-soon.png \
	audio-volume-high.png \
	audio-volume-low.png \
	audio-volume-medium.png \
	audio-volume-muted.png \
	audio-volume-off.png \
	avatar-default.png \
	battery-caution-charging.png \
	battery-caution.png \
	battery-empty.png \
	battery-full-charged.png \
	battery-full-charging.png \
	battery-full.png \
	battery-good-charging.png \
	battery-good.png \
	battery-low-charging.png \
	battery-low.png \
	battery-missing.png \
	changes-allow.png \
	changes-prevent.png \
	computer-fail.png \
	dialog-error.png \
	dialog-information.png \
	dialog-password.png \
	dialog-question.png \
	dialog-warning.png \
	dropboxstatus-busy2.png \
	dropboxstatus-busy.png \
	dropboxstatus-idle.png \
	dropboxstatus-logo.png \
	dropboxstatus-x.png \
	image-loading.png \
	image-missing.png \
	mail-attachment.png \
	mail-read.png \
	mail-replied.png \
	mail-unread.png \
	media-playlist-repeat.png \
	media-playlist-shuffle.png \
	microphone-sensitivity-high.png \
	microphone-sensitivity-low.png \
	microphone-sensitivity-medium.png \
	microphone-sensitivity-muted.png \
	network-error.png \
	network-idle.png \
	network-offline.png \
	network-receive.png \
	network-transmit.png \
	network-transmit-receive.png \
	non-starred.png \
	printer-error.png \
	printer-printing.png \
	security-high.png \
	security-low.png \
	security-medium.png \
	semi-starred.png \
	semi-starred-rtl.png \
	software-update-available.png \
	software-update-urgent.png \
	starred.png \
	task-due.png \
	task-past-due.png \
	trophy-bronze.png \
	trophy-gold.png \
	trophy-silver.png \
	user-available.png \
	user-away.png \
	user-busy.png \
	user-idle.png \
	user-invisible.png \
	user-offline.png \
	user-trash-full.png \
	weather-clear-night.png \
	weather-clear.png \
	weather-few-clouds-night.png \
	weather-few-clouds.png \
	weather-fog.png \
	weather-overcast.png \
	weather-severe-alert.png \
	weather-showers.png \
	weather-showers-scattered.png \
	weather-snow.png \
	weather-storm.png \
	$(NULL)

appointment-missed.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:59:319:75 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

appointment-soon.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:359:719:375 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-high.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:365:319:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-low.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-medium.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:365:719:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-muted.png: ../../../src/audio-volume.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:65:719:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

audio-volume-off.png: ../../../src/audio-volume-off.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

avatar-default.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-caution-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=323:365:339:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-caution.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:665:1119:681 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-empty.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:-255:719:-239 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full-charged.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:-565:719:-549 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:65:719:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-full.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:365:719:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-good-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:65:1119:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-good.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:365:1119:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-low-charging.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:-255:1119:-239 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-low.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:665:719:681 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

battery-missing.png: ../../../src/batteries.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:-255:319:-239 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

changes-allow.png: ../../../src/changes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:65:719:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

changes-prevent.png: ../../../src/changes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

computer-fail.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1903:65:1919:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-error.png: ../../../src/dialog-error.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-information.png: ../../../src/dialog-information.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-password.png: ../../../src/dialog-password.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-question.png: ../../../src/dialog-question.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

dialog-warning.png: ../../../src/dialog-warning.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-drag-accept.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-open.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-visiting.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

image-loading.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=700:60:716:76 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

image-missing.png: ../../../src/photos.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:65:719:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-attachment.png: ../../../src/mail-attachment.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-read.png: ../../../src/open-envelopes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-replied.png: ../../../src/mail-replied.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-unread.png: ../../../src/mail-unread.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playlist-repeat.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=33:6:49:22 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playlist-shuffle.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=13:6:29:22 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

microphone-sensitivity-muted.png: ../../../src/microphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=450:74:466:90 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

microphone-sensitivity-low.png: ../../../src/microphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=530:74:546:90 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

microphone-sensitivity-medium.png: ../../../src/microphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=610:74:626:90 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

microphone-sensitivity-high.png: ../../../src/microphones.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=690:74:706:90 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-error.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:365:1119:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-idle.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-offline.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1503:365:1519:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-receive.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1503:65:1519:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-transmit.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:65:1119:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

network-transmit-receive.png: ../../../src/computers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:65:719:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-error.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:59:719:75 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

printer-printing.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:359:719:375 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-high.png: ../../../src/security-high.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-low.png: ../../../src/security-low.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

security-medium.png: ../../../src/security-medium.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

software-update-available.png: ../../../src/software-update.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

software-update-urgent.png: ../../../src/software-update.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:65:719:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

non-starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=299:64:315:80 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

semi-starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=723:365:739:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

semi-starred-rtl.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=723:65:739:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

starred.png: ../../../src/starred.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:365:319:381 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

task-due.png: ../../../src/copy-paste-tasks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

task-past-due.png: ../../../src/copy-paste-tasks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:65:719:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-bronze.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:63:1119:79 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-gold.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:63:319:79 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

trophy-silver.png: ../../../src/trophies.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:63:719:79 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-available.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1213:65:1229:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-offline.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1273:65:1289:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-idle.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1333:65:1349:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-away.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1393:65:1409:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-invisible.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1453:65:1469:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-busy.png: ../../../src/users.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1513:65:1529:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

user-trash-full.png: ../../../src/trash.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-clear-night.png: ../../../src/weather-clear-night.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-clear.png: ../../../src/weather-clear.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-few-clouds-night.png: ../../../src/weather-few-clouds-night.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-few-clouds.png: ../../../src/weather-few-clouds.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-fog.png: ../../../src/weather-fog.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-overcast.png: ../../../src/weather-overcast.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-severe-alert.png: ../../../src/weather-severe-alert.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-showers.png: ../../../src/weather-showers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-showers-scattered.png: ../../../src/weather-showers-scattered.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-snow.png: ../../../src/weather-snow.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

weather-storm.png: ../../../src/weather-storm.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:65:319:81 -w=16 -h=16 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
