NULL =

png_icons = \
	address-book-new.png \
	application-exit.png \
	appointment-new.png \
	bookmark-new.png \
	call-start.png \
	call-stop.png \
	contact-new.png \
	document-new.png \
	document-open-recent.png \
	document-page-setup.png \
	document-print.png \
	document-print-preview.png \
	document-properties.png \
	document-revert.png \
	document-revert-rtl.png \
	document-save-as.png \
	document-save.png \
	document-send.png \
	edit-clear.png \
	edit-clear-rtl.png \
	edit-copy.png \
	edit-cut.png \
	edit-delete.png \
	edit-find.png \
	edit-find-replace.png \
	edit-paste.png \
	edit-redo.png \
	edit-redo-rtl.png \
	edit-select-all.png \
	edit-undo.png \
	edit-undo-rtl.png \
	format-indent-less.png \
	format-indent-less-rtl.png \
	format-indent-more.png \
	format-indent-more-rtl.png \
	format-justify-center.png \
	format-justify-fill.png \
	format-justify-left.png \
	format-justify-right.png \
	format-text-bold.png \
	format-text-direction-ltr.png \
	format-text-direction-rtl.png \
	format-text-italic.png \
	format-text-strikethrough.png \
	format-text-underline.png \
	go-bottom.png \
	go-down.png \
	go-first.png \
	go-home.png \
	go-jump.png \
	go-last.png \
	go-next.png \
	go-previous.png \
	go-top.png \
	go-up.png \
	help-about.png \
	help-faq.png \
	insert-image.png \
	insert-link.png \
	insert-object.png \
	insert-text.png \
	list-add.png \
	list-remove.png \
	mail-forward.png \
	mail-mark-important.png \
	mail-mark-junk.png \
	mail-mark-notjunk.png \
	mail-mark-read.png \
	mail-mark-unread.png \
	mail-message-new.png \
	mail-reply-all.png \
	mail-reply-sender.png \
	mail-send.png \
	mail-send-receive.png \
	mark-location.png \
	media-eject.png \
	media-playback-pause.png \
	media-playback-start.png \
	media-playback-start-rtl.png \
	media-playback-stop.png \
	media-record.png \
	media-seek-backward.png \
	media-seek-forward.png \
	media-skip-backward.png \
	media-skip-forward.png \
	object-flip-horizontal.png \
	object-flip-vertical.png \
	object-rotate-left.png \
	object-rotate-right.png \
	process-stop.png \
	system-lock-screen.png \
	system-log-out.png \
	system-run.png \
	system-search.png \
	system-shutdown.png \
	tab-new.png \
	tools-check-spelling.png \
	view-fullscreen.png \
	view-refresh.png \
	view-restore.png \
	view-sort-ascending.png \
	view-sort-descending.png \
	window-close.png \
	window-new.png \
	zoom-fit-best.png \
	zoom-in.png \
	zoom-original.png \
	zoom-out.png \
	$(NULL)

address-book-new.png: ../../../src/x-office-address-book.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

application-exit.png:../../../src/application-exit.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

appointment-new.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:396:325:418 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

bookmark-new.png: ../../../src/bookmark-new.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

call-start.png: ../../../src/call-start.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

call-stop.png: ../../../src/call-stop.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

contact-new.png: ../../../src/contact-new.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-new.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=701:398:723:420 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-open.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1503:701:1525:723 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-open-recent.png: ../../../src/clocks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:96:725:118 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-page-setup.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=301:98:323:120 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-print.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:94:325:116 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-print-preview.png: ../../../src/printers.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:395:1125:417 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-properties.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1101:398:1123:420 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-revert.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1901:398:1923:420 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-revert-rtl.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1500:98:1522:120 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-save-as.png: ../../../src/cabinets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1103:101:1125:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-save.png: ../../../src/cabinets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:101:725:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

document-send.png: ../../../src/document-send.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-clear.png: ../../../src/edit-clear-all.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-clear-rtl.png: ../../../src/edit-clear-all.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -flop $@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-copy.png: ../../../src/copy-paste-tasks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:401:725:423 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-cut.png: ../../../src/edit-cut.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-delete.png: ../../../src/edit-delete.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-find.png: ../../../src/find.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=301:101:323:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-find-replace.png: ../../../src/find.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=701:101:723:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-paste.png: ../../../src/copy-paste-tasks.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:401:325:423 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-undo.png: ../../../src/edit-undo-redo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=23:62:45:84 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-redo.png: ../../../src/edit-undo-redo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=83:62:105:84 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-select-all.png: ../../../src/paper-sheets.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1501:398:1523:420 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-redo-rtl.png: ../../../src/edit-undo-redo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=144:62:166:84 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

edit-undo-rtl.png: ../../../src/edit-undo-redo.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=202:62:224:84 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

folder-new.png: ../../../src/folders.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:701:325:723 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-indent-less-rtl.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=-107:42:-85:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-indent-more-rtl.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=-47:42:-25:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-indent-less.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=13:42:35:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-indent-more.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=73:42:95:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-justify-left.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=133:42:155:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-justify-center.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=193:42:215:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-justify-right.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=253:42:275:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-justify-fill.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=313:42:335:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-bold.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=373:42:395:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-direction-ltr.png: ../../../src/format-text-direction-ltr.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-direction-rtl.png: ../../../src/format-text-direction-rtl.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-italic.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=434:42:456:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-strikethrough.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=493:42:515:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

format-text-underline.png: ../../../src/format-indent-justify-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=553:42:575:64 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-jump.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=33:57:55:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-bottom.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=113:57:135:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-down.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=193:57:215:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-top.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=283:57:305:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-up.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=373:57:395:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-first.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=463:57:485:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-previous.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=543:57:565:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-refresh.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=623:57:645:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

process-stop.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:57:725:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-next.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=783:57:805:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-last.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=863:57:885:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

go-home.png: ../../../src/navigation-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=943:57:965:79 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

help-about.png: ../../../src/help-about.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

help-faq.png: ../../../src/help-faq.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

insert-image.png: ../../../src/insert-image.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

insert-link.png: ../../../src/insert-link.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

insert-object.png: ../../../src/insert-object.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

insert-text.png: ../../../src/insert-text.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

list-add.png: ../../../src/list-add-remove.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

list-remove.png: ../../../src/list-add-remove.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:101:725:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-forward.png: ../../../src/mail-forward.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-important.png: ../../../src/mail-mark-important.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-junk.png: ../../../src/mail-mark-junk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=296:202:344:250 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-notjunk.png: ../../../src/mail-mark-notjunk.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=297:123:319:145 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-read.png: ../../../src/open-envelopes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=1503:101:1525:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-mark-unread.png: ../../../src/mail-mark-unread.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-message-new.png: ../../../src/open-envelopes.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-reply-all.png: ../../../src/mail-reply-all.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-reply-sender.png: ../../../src/mail-reply-sender.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-send.png: ../../../src/mail-send.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mail-send-receive.png: ../../../src/mail-send-receive.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

mark-location.png: ../../../src/mark-location.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-eject.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=73:31:95:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-skip-backward.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=103:31:125:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-seek-backward.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=133:31:155:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playback-pause.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=163:31:185:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playback-start.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=193:31:215:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playback-stop.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=223:31:245:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-seek-forward.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=253:31:275:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-skip-forward.png:	../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=283:31:305:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-record.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=313:31:335:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

media-playback-start-rtl.png: ../../../src/media-control-icons.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=353:31:375:53 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

object-flip-horizontal.png: ../../../src/object-flip-rotate.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:61:44:83 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

object-flip-vertical.png: ../../../src/object-flip-rotate.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=52:61:74:83 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

object-rotate-left.png: ../../../src/object-flip-rotate.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=83:61:105:83 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

object-rotate-right.png: ../../../src/object-flip-rotate.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=112:61:134:83 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-lock-screen.png: ../../../src/displays.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:101:725:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-log-out.png: ../../../src/system-log-out.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-run.png: ../../../src/system-run.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-search.png: ../../../src/system-search.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

system-shutdown.png: ../../../src/system-shutdown.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

tab-new.png: ../../../src/tab-new.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

tools-check-spelling.png: ../../../src/tools-check-spelling.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-fullscreen.png: ../../../src/view-fullscreen-restore.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-restore.png: ../../../src/view-fullscreen-restore.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:101:725:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-sort-ascending.png: ../../../src/view-sort.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=22:101:44:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

view-sort-descending.png: ../../../src/view-sort.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=82:101:105:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

window-close.png: ../../../src/window-close.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

window-new.png: ../../../src/window-new.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

zoom-fit-best.png: ../../../src/zoom.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:101:725:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

zoom-in.png: ../../../src/zoom.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:401:325:423 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

zoom-original.png: ../../../src/zoom.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=303:101:325:123 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

zoom-out.png: ../../../src/zoom.svg
	@echo "  "$@
	@inkscape -z $^ --export-area=703:401:725:423 -w=22 -h=22 -e=$@ 1> /dev/null
	@mogrify -quiet -strip $@

.PHONY: build-png-icons-local clean-png-icons-local
build-png-icons-local: $(png_icons)

clean-png-icons-local:
	@echo "  Cleaning icons..."
	@rm -f $(png_icons)
